--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "dev": "nodemon api/index.js",
     "start": "node api/index.js",
-    "build": "npm i && npm install --prefix client && npm run build --prefix client",
-
+    "build": "npm i && npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
